// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FeatherTooltip should hide tooltip on escape 1`] = `
<div>
  
  <teleport-stub>
    <transition-stub>
      <!--v-if-->
    </transition-stub>
  </teleport-stub>
  
  <button
    aria-describedby="feather-tooltip"
    data-feather-tooltip="feather-tooltip-trigger"
  >
    TOOLTIP BUTTON
  </button>
  
  
</div>
`;

exports[`FeatherTooltip should not show a tooltip until hover 1`] = `
<div>
  
  <teleport-stub>
    <transition-stub>
      <!--v-if-->
    </transition-stub>
  </teleport-stub>
  
  <button
    aria-describedby="feather-tooltip"
    data-feather-tooltip="feather-tooltip-trigger"
  >
    TOOLTIP BUTTON
  </button>
  
  
</div>
`;

exports[`FeatherTooltip should show a tooltip on focus 1`] = `
<div>
  
  <teleport-stub>
    <transition-stub>
      <div
        class="feather-tooltip-container center p-bottom"
        style="left: 0px; top: 0px;"
      >
        <div
          class="tooltip"
          id="feather-tooltip"
          role="tooltip"
        >
          hello world
        </div>
        <svg
          class="tooltip-pointer"
          fill="none"
          height="9"
          viewBox="0 0 40 9"
          width="40"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M12.0147 2.17157C11.2646 1.42143 10.2472 1 9.18629 1H0.5C0.223858 1 0 0.776142 0 0.5C0 0.223858 0.223857 0 0.5 0H39.5C39.7761 0 40 0.223858 40 0.5C40 0.776142 39.7761 1 39.5 1H31.1274C30.0666 1 29.0492 1.42143 28.299 2.17157L22.9853 7.4853C21.4232 9.04739 18.8905 9.04739 17.3284 7.48529L12.0147 2.17157Z"
            fill="var(--feather-high-visibility-on-surface)"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </transition-stub>
  </teleport-stub>
  
  <button
    aria-describedby="feather-tooltip"
    data-feather-tooltip="feather-tooltip-trigger"
  >
    TOOLTIP BUTTON
  </button>
  
  
</div>
`;

exports[`FeatherTooltip should show a tooltip on hover 1`] = `
<div>
  
  <teleport-stub>
    <transition-stub>
      <div
        class="feather-tooltip-container center p-bottom"
        style="left: 0px; top: 0px;"
      >
        <div
          class="tooltip"
          id="feather-tooltip"
          role="tooltip"
        >
          hello world
        </div>
        <svg
          class="tooltip-pointer"
          fill="none"
          height="9"
          viewBox="0 0 40 9"
          width="40"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M12.0147 2.17157C11.2646 1.42143 10.2472 1 9.18629 1H0.5C0.223858 1 0 0.776142 0 0.5C0 0.223858 0.223857 0 0.5 0H39.5C39.7761 0 40 0.223858 40 0.5C40 0.776142 39.7761 1 39.5 1H31.1274C30.0666 1 29.0492 1.42143 28.299 2.17157L22.9853 7.4853C21.4232 9.04739 18.8905 9.04739 17.3284 7.48529L12.0147 2.17157Z"
            fill="var(--feather-high-visibility-on-surface)"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </transition-stub>
  </teleport-stub>
  
  <button
    aria-describedby="feather-tooltip"
    data-feather-tooltip="feather-tooltip-trigger"
  >
    TOOLTIP BUTTON
  </button>
  
  
</div>
`;
